--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^5.1.7",
+    "@mantine/core": "^5.1.7",
+    "@mantine/hooks": "^5.1.7",
+    "@mantine/next": "^5.1.7",
+    "embla-carousel-react": "^7.0.1",
+    "firebase": "^9.9.2",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.54.4"
   },
   "devDependencies": {
     "@types/node": "18.7.2",
