--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/server": "^11.10.0",
     "@mantine/carousel": "^5.2.0",
     "@mantine/core": "^5.2.0",
+    "@mantine/dates": "^5.4.2",
     "@mantine/hooks": "^5.2.0",
     "@mantine/next": "^5.2.0",
     "@reduxjs/toolkit": "^1.8.5",
