--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
-    "sass": "^1.54.4"
+    "sass": "^1.54.4",
+    "sharp": "^0.31.2"
   },
   "devDependencies": {
     "@types/node": "18.7.2",
